tools ts webpack5

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -67,7 +67,7 @@
   },
   "hypertype": {
     "lib": {
-      "index": "./dist/esm/index.js"
+      "entryPoint": "dist/esm/index.js"
     }
   },
   "gitHead": "9151a37757c75a5b80836c57de97db2bf7158fa0"
