--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -55,7 +55,7 @@
   },
   "hypertype": {
     "lib": {
-      "index": "./dist/esm/index.js"
+      "entryPoint": "dist/esm/index.js"
     }
   },
   "gitHead": "9151a37757c75a5b80836c57de97db2bf7158fa0"
