tools ts webpack5

--- a/lerna.json
+++ b/lerna.json
@@ -8,10 +8,24 @@
   "command": {
     "bootstrap": {
       "nohoist": [
+        "redux",
+        "router5",
+        "router5-plugin-browser",
+
         "rxjs",
         "crc-32",
         "reflect-metadata",
-        "ulid"
+        "ulid",
+
+        "amqp-ts",
+        "angular-template",
+        "basichtml",
+        "body-parser",
+        "bufferutil",
+        "core-decorators",
+        "express",
+        "redis",
+        "utf-8-validate"
       ]
     }
   }
