--- a/packages/infr-node/tsconfig.json
+++ b/packages/infr-node/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../tsconfig",
+  "extends": "../../config/tsconfig.base.json",
   "compilerOptions": {
     "baseUrl": ".",
     "rootDir": "./",
