--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tools/tsconfig.base",
+  "extends": "../../config/tsconfig.base",
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "./dist/esm",
