--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "3.7.4",
+  "version": "3.7.5",
   "description": "",
   "bin": {
     "hypertype": "./dist/bin.js"
@@ -25,18 +25,18 @@
     "@types/chai": "4",
     "@types/node": "16",
     "chai": "4",
-    "jest": "27",
-    "node-libs-browser": "2.2.1",
-    "webpack": "5.67",
-    "webpack-merge": "5.8",
-    "webpack-dev-server": "4.7",
-    "html-webpack-plugin": "5.5",
-    "webpack-bundle-analyzer": "4.5",
-    "tsconfig-paths-webpack-plugin": "3.5",
-    "ts-loader": "9.2",
     "css-loader": "6.5",
+    "html-webpack-plugin": "5.5",
+    "jest": "27",
     "less": "4.1",
-    "less-loader": "10.2"
+    "less-loader": "10.2",
+    "node-libs-browser": "2.2.1",
+    "ts-loader": "9.2",
+    "tsconfig-paths-webpack-plugin": "3.5",
+    "webpack": "5.67",
+    "webpack-bundle-analyzer": "4.5",
+    "webpack-dev-server": "4.7",
+    "webpack-merge": "5.8"
   },
   "gitHead": "9151a37757c75a5b80836c57de97db2bf7158fa0"
 }
