--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -31,6 +31,7 @@
     "less": "4.1",
     "less-loader": "10.2",
     "node-libs-browser": "2.2.1",
+    "raw-loader": "4",
     "ts-loader": "9.2",
     "tsconfig-paths-webpack-plugin": "3.5",
     "webpack": "5.67",
