--- a/lerna.json
+++ b/lerna.json
@@ -14,16 +14,7 @@
         "rxjs",
         "crc-32",
         "reflect-metadata",
-        "ulid",
-        "amqp-ts",
-        "angular-template",
-        "basichtml",
-        "body-parser",
-        "bufferutil",
-        "core-decorators",
-        "express",
-        "redis",
-        "utf-8-validate"
+        "ulid"
       ]
     }
   }
