tools ts webpack5

--- a/packages/infr-node/package.json
+++ b/packages/infr-node/package.json
@@ -44,6 +44,7 @@
     "@hypertype/tools": "^3.4.1"
   },
   "devDependencies": {
+    "@types/node": "16",
     "@hypertype/core": "^3.7.8",
     "@hypertype/infr": "^3.7.8",
     "@hypertype/tools": "^3.7.8"
