--- a/packages/infr/package.json
+++ b/packages/infr/package.json
@@ -45,9 +45,9 @@
     "@hypertype/core": "^3.4.1"
   },
   "devDependencies": {
+    "@types/node": "16",
     "@hypertype/core": "^3.7.8",
-    "@hypertype/tools": "^3.7.8",
-    "@types/node": "16"
+    "@hypertype/tools": "^3.7.8"
   },
   "hypertype": {
     "lib": {
