--- a/packages/infr-browser/package.json
+++ b/packages/infr-browser/package.json
@@ -45,10 +45,10 @@
     "@hypertype/infr": "^3.4.1"
   },
   "devDependencies": {
+    "@types/node": "16",
     "@hypertype/core": "^3.7.8",
     "@hypertype/infr": "^3.7.8",
-    "@hypertype/tools": "^3.7.8",
-    "@types/node": "16"
+    "@hypertype/tools": "^3.7.8"
   },
   "hypertype": {
     "lib": {
