--- a/packages/infr/package.json
+++ b/packages/infr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypertype/infr",
-  "version": "3.7.8",
+  "version": "3.7.10",
   "description": "",
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
@@ -45,9 +45,9 @@
     "@hypertype/core": "^3.4.1"
   },
   "devDependencies": {
-    "@types/node": "16",
-    "@hypertype/core": "^3.7.8",
-    "@hypertype/tools": "^3.7.8"
+    "@hypertype/core": "^3.7.10",
+    "@hypertype/tools": "^3.7.10",
+    "@types/node": "16"
   },
   "hypertype": {
     "lib": {
