--- a/packages/infr-node/package.json
+++ b/packages/infr-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypertype/infr-node",
-  "version": "3.7.8",
+  "version": "3.7.10",
   "description": "",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
@@ -44,10 +44,10 @@
     "@hypertype/tools": "^3.4.1"
   },
   "devDependencies": {
-    "@types/node": "16",
-    "@hypertype/core": "^3.7.8",
-    "@hypertype/infr": "^3.7.8",
-    "@hypertype/tools": "^3.7.8"
+    "@hypertype/core": "^3.7.10",
+    "@hypertype/infr": "^3.7.10",
+    "@hypertype/tools": "^3.7.10",
+    "@types/node": "16"
   },
   "dependencies": {
     "eventsource": "*",
