tools ts webpack5

--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -25,19 +25,19 @@
     "@types/chai": "4",
     "@types/node": "16",
     "chai": "4",
-    "css-loader": "6.5",
-    "html-webpack-plugin": "5.5",
-    "jest": "27",
-    "less": "4.1",
-    "less-loader": "10.2",
+    "css-loader": "6.5.x",
+    "html-webpack-plugin": "5.5.x",
+    "jest": "27.x",
+    "less": "4.1.x",
+    "less-loader": "10.2.x",
     "node-libs-browser": "2.2.1",
-    "raw-loader": "4",
-    "ts-loader": "9.2",
-    "tsconfig-paths-webpack-plugin": "3.5",
-    "webpack": "5.67",
-    "webpack-bundle-analyzer": "4.5",
-    "webpack-dev-server": "4.7",
-    "webpack-merge": "5.8"
+    "raw-loader": "4.0.x",
+    "ts-loader": "9.2.x",
+    "tsconfig-paths-webpack-plugin": "3.5.x",
+    "webpack": "5.67.x",
+    "webpack-bundle-analyzer": "4.5.x",
+    "webpack-dev-server": "4.7.x",
+    "webpack-merge": "5.8.x"
   },
   "gitHead": "9151a37757c75a5b80836c57de97db2bf7158fa0"
 }
