--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -36,16 +36,10 @@
     "redis",
     "utf-8-validate"
   ],
-  "devDependencies": {
+  "dependencies": {
     "@hypertype/core": "^3.7.11",
     "@hypertype/infr": "^3.7.11",
     "@hypertype/infr-node": "^3.7.11",
-    "@hypertype/tools": "^3.7.11",
-    "@types/express": "^4.17.0",
-    "@types/node": "16",
-    "@types/redis": "^2.8.14",
-    "@types/workerpool": "^2.3.1",
-    "@types/ws": "^6.0.2",
     "amqp-ts": "^1.5.0",
     "angular-template": "^2.4.0",
     "basichtml": "^1.1.1",
@@ -53,9 +47,17 @@
     "bufferutil": "^4.0.1",
     "core-decorators": "^0.20.0",
     "express": "^4.17.1",
-    "luxon": "^1.24.1",
     "redis": "^2.8.0",
-    "utf-8-validate": "^5.0.2"
+    "utf-8-validate": "^5.0.2",
+    "luxon": "^1.24.1"
+  },
+  "devDependencies": {
+    "@hypertype/tools": "^3.7.11",
+    "@types/express": "^4.17.0",
+    "@types/node": "16",
+    "@types/redis": "^2.8.14",
+    "@types/workerpool": "^2.3.1",
+    "@types/ws": "^6.0.2"
   },
   "hypertype": {
     "node": {
