--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -20,12 +20,9 @@
   "peerDependencies": {
     "typescript": "*"
   },
-  "bundledDependencies": [
-    "chalk"
-  ],
   "dependencies": {
     "chai": "4",
-    "chalk": "4.1.2",
+    "colors": "1.4.0",
     "css-loader": "6.5.1",
     "dotenv": "10.0.0",
     "dotenv-expand": "5.1.0",
