--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "3.7.11",
+  "version": "3.7.12",
   "license": "MIT",
   "module": "./dist/esm/index.js",
   "main": "./dist/index.js",
@@ -37,9 +37,9 @@
     "utf-8-validate"
   ],
   "dependencies": {
-    "@hypertype/core": "^3.7.11",
-    "@hypertype/infr": "^3.7.11",
-    "@hypertype/infr-node": "^3.7.11",
+    "@hypertype/core": "^3.7.12",
+    "@hypertype/infr": "^3.7.12",
+    "@hypertype/infr-node": "^3.7.12",
     "amqp-ts": "^1.5.0",
     "angular-template": "^2.4.0",
     "basichtml": "^1.1.1",
@@ -47,12 +47,12 @@
     "bufferutil": "^4.0.1",
     "core-decorators": "^0.20.0",
     "express": "^4.17.1",
+    "luxon": "^1.24.1",
     "redis": "^2.8.0",
-    "utf-8-validate": "^5.0.2",
-    "luxon": "^1.24.1"
+    "utf-8-validate": "^5.0.2"
   },
   "devDependencies": {
-    "@hypertype/tools": "^3.7.11",
+    "@hypertype/tools": "^3.7.12",
     "@types/express": "^4.17.0",
     "@types/node": "16",
     "@types/redis": "^2.8.14",
