ts 4.5 + hypertype compile

--- a/packages/domain/tsconfig.json
+++ b/packages/domain/tsconfig.json
@@ -9,8 +9,8 @@
     "moduleResolution": "node",
     "target": "es2018",
     "lib": [
-      "WebWorker",
-      "ESNext"
+      "dom",
+      "ESNext",
     ]
   },
   "include": [
