--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -20,6 +20,7 @@
   "peerDependencies": {
     "typescript": "*"
   },
+  "typings": "typings.d.ts",
   "dependencies": {
     "chai": "4",
     "colors": "1.4.0",
