--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "3.7.15-1",
+  "version": "3.7.16",
   "description": "",
   "bin": {
     "hypertype": "./dist/bin.js"
