--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -7,7 +7,9 @@
     "moduleResolution": "node",
     "declarationDir": "./dist/typings",
     "noEmitOnError": true,
-    "types": []
+    "types": [
+      "node"
+    ]
   },
   "include": [
     "**/*.ts"
