--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "ttypescript": "^1.5.10"
   },
   "devDependencies": {
-    "lerna": "^4.0.0",
-    "typescript": "4.5"
+    "lerna": "4.x.x",
+    "typescript": "4.5.x"
   },
   "dependencies": {},
   "private": true,
