--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -45,8 +45,8 @@
     "@hypertype/core": "^3.7.17",
     "@hypertype/infr": "^3.7.17",
     "@hypertype/tools": "^3.7.17",
-    "@types/node": "16",
-    "typescript": "4.5"
+    "@types/node": "16.x.x",
+    "typescript": "4.5.x"
   },
   "hypertype": {
     "lib": {
