--- a/packages/infr-browser/package.json
+++ b/packages/infr-browser/package.json
@@ -44,7 +44,7 @@
     "@hypertype/core": "^3.7.17",
     "@hypertype/infr": "^3.7.17",
     "@hypertype/tools": "^3.7.17",
-    "@types/node": "16"
+    "@types/node": "16.x.x"
   },
   "hypertype": {
     "lib": {
