--- a/packages/infr/package.json
+++ b/packages/infr/package.json
@@ -44,7 +44,7 @@
   "devDependencies": {
     "@hypertype/core": "^3.7.17",
     "@hypertype/tools": "^3.7.17",
-    "@types/node": "16"
+    "@types/node": "16.x.x"
   },
   "hypertype": {
     "lib": {
