--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -40,8 +40,8 @@
   "devDependencies": {
     "@hypertype/core": "^3.7.17",
     "@hypertype/tools": "^3.7.17",
-    "@types/node": "16",
-    "typescript": "4.5"
+    "@types/node": "16.x.x",
+    "typescript": "4.5.x"
   },
   "hypertype": {
     "lib": {
