--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "lerna": "^4.0.0",
-    "typescript": "4.5"
+    "typescript": "4.5.x"
   },
   "dependencies": {},
   "private": true,
