--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -58,7 +58,7 @@
     "redux": "4.0.5",
     "router5": "8.0.1",
     "router5-plugin-browser": "8.0.1",
-    "typescript": "4.5"
+    "typescript": "4.5.x"
   },
   "hypertype": {
     "lib": {
