--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,7 +32,7 @@
   "homepage": "https://github.com/hypertype/ui#readme",
   "peerDependencies": {
     "@types/node": "16",
-    "typescript": "4.5"
+    "typescript": "4.5.x"
   },
   "dependencies": {
     "uhtml": "^2"
@@ -41,7 +41,7 @@
     "@hypertype/core": "^3.7.17",
     "@hypertype/tools": "^3.7.17",
     "@types/node": "16",
-    "typescript": "4.5"
+    "typescript": "4.5.x"
   },
   "hypertype": {
     "lib": {
