--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "3.7.17",
+  "version": "3.7.18",
   "description": "",
   "bin": {
     "hypertype": "bin.wrap.js"
@@ -20,8 +20,8 @@
     "plugins"
   ],
   "peerDependencies": {
-    "typescript": "4.5.x",
-    "ttypescript": "^1.5.10"
+    "ttypescript": "^1.5.10",
+    "typescript": "4.5.x"
   },
   "dependencies": {
     "chai": "4",
