--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -41,6 +41,9 @@
       }
     }
   },
+  "peerDependencies": {
+    "@hypertype/core": "^3.7.17"
+  },
   "devDependencies": {
     "@hypertype/core": "^3.7.17",
     "@hypertype/infr": "^3.7.17",
