--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/hypertype/ui#readme",
   "peerDependencies": {
     "@types/node": "16",
+    "@hypertype/core": "^3.7.17",
     "typescript": "4.5"
   },
   "dependencies": {
