--- a/packages/infr/package.json
+++ b/packages/infr/package.json
@@ -41,6 +41,9 @@
       }
     }
   },
+  "peerDependencies": {
+    "@hypertype/core": "*"
+  },
   "devDependencies": {
     "@hypertype/core": "^3.7.19",
     "@hypertype/tools": "^3.7.19",
