--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -48,15 +48,16 @@
     "redux-devtools-extension": "*"
   },
   "peerDependencies": {
-    "@hypertype/core": "^3.7.17",
-    "@hypertype/ui": "^3.7.17"
+    "@hypertype/core": "*",
+    "@hypertype/infr": "*",
+    "@hypertype/ui": "*"
   },
   "devDependencies": {
-    "@hypertype/core": "^3.7.18",
-    "@hypertype/infr": "^3.7.18",
+    "@hypertype/core": "^3.7.19",
+    "@hypertype/infr": "^3.7.19",
     "@hypertype/tools": "^3.7.19",
     "@hypertype/ui": "^3.7.19",
-    "@types/node": "16",
+    "@types/node": "16.x.x",
     "@types/redux": "latest",
     "@types/router5": "latest",
     "redux": "4.0.5",
