--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,8 +44,9 @@
 	},
 	"bundledDependencies": [],
 	"peerDependencies": {
-		"luxon": "1.12.1"
-	},
+		"luxon": "1.12.1",
+    "@types/luxon": "1.15.2"
+  },
 	"devDependencies": {
 		"@hypertype/tools": "^3.7.21",
 		"@types/node": "16.x.x",
@@ -54,7 +55,10 @@
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "6.6.3",
 		"symbol-observable": "4.x.x",
-		"ulid": "^2.3.0"
+		"ulid": "^2.3.0",
+		"ts-jest": "^27.1.3",
+		"@types/jest": "^27.4.0",
+		"jest": "^27.5.1"
 	},
 	"hypertype": {
 		"lib": {
