--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "lerna": "4.x.x",
     "typescript": "4.5.x"
   },
-  "dependencies": {},
+  "dependencies": {
+    "ts-jest": "^27.1.3"
+  },
   "private": true,
   "workspaces": [
     "packages/*"
