--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@hypertype/core",
-	"version": "3.7.21",
+	"version": "3.8.0",
 	"description": "",
 	"main": "dist/index.js",
 	"bundle": "dist/index.js",
@@ -32,10 +32,10 @@
 		"test": "tests"
 	},
 	"jest": {
-    "preset": "ts-jest",
-    "modulePathIgnorePatterns": [
-      "<rootDir>/dist/"
-    ],
+		"preset": "ts-jest",
+		"modulePathIgnorePatterns": [
+			"<rootDir>/dist/"
+		],
 		"globals": {
 			"ts-jest": {
 				"tsConfig": "tests/tsconfig.json",
@@ -45,21 +45,21 @@
 	},
 	"bundledDependencies": [],
 	"peerDependencies": {
-		"luxon": "1.12.1",
-    "@types/luxon": "1.15.2"
-  },
+		"@types/luxon": "1.15.2",
+		"luxon": "1.12.1"
+	},
 	"devDependencies": {
-		"@hypertype/tools": "^3.7.21",
+		"@hypertype/tools": "^3.8.0",
+		"@types/jest": "^27.4.0",
 		"@types/node": "16.x.x",
 		"crc-32": "*",
+		"jest": "^27.5.1",
 		"msgpackr": "1.x.x",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "6.6.3",
 		"symbol-observable": "4.x.x",
-		"ulid": "^2.3.0",
 		"ts-jest": "^27.1.3",
-		"@types/jest": "^27.4.0",
-		"jest": "^27.5.1"
+		"ulid": "^2.3.0"
 	},
 	"hypertype": {
 		"lib": {
