--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,7 +43,6 @@
 			}
 		}
 	},
-	"bundledDependencies": [],
 	"peerDependencies": {
 		"@types/luxon": "1.15.2",
 		"luxon": "1.12.1"
@@ -59,7 +58,9 @@
 		"rxjs": "6.6.3",
 		"symbol-observable": "4.x.x",
 		"ts-jest": "^27.1.3",
-		"ulid": "^2.3.0"
+		"ulid": "^2.3.0",
+    "@types/luxon": "1.15.2",
+    "luxon": "1.12.1"
 	},
 	"hypertype": {
 		"lib": {
