--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@hypertype/core",
-	"version": "3.8.0",
+	"version": "3.8.1",
 	"description": "",
 	"main": "dist/index.js",
 	"bundle": "dist/index.js",
@@ -48,19 +48,19 @@
 		"luxon": "1.12.1"
 	},
 	"devDependencies": {
-		"@hypertype/tools": "^3.8.0",
+		"@hypertype/tools": "^3.8.1",
 		"@types/jest": "^27.4.0",
+		"@types/luxon": "1.15.2",
 		"@types/node": "16.x.x",
 		"crc-32": "*",
 		"jest": "^27.5.1",
+		"luxon": "1.12.1",
 		"msgpackr": "1.x.x",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "6.6.3",
 		"symbol-observable": "4.x.x",
 		"ts-jest": "^27.1.3",
-		"ulid": "^2.3.0",
-    "@types/luxon": "1.15.2",
-    "luxon": "1.12.1"
+		"ulid": "^2.3.0"
 	},
 	"hypertype": {
 		"lib": {
