--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typescript": "4.5.x"
   },
   "dependencies": {
-    "ts-jest": "^27.1.3"
+    "ts-jest": "27.x.x"
   },
   "private": true,
   "workspaces": [
