domain and ui -> cmmn

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist",
-    "build": "tsc -b --watch",
+    "build": "cmmn compile -b --watch",
     "bundle": "lerna run bundle",
+    "bundle:watch": "cmmn bundle -b --watch",
     "prod": "tsc -b && lerna run prod",
     "publish": "lerna publish patch",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +18,8 @@
   },
   "devDependencies": {
     "lerna": "4.x.x",
-    "typescript": "4.5.x"
+    "@cmmn/tools": "^1.4.1",
+    "typescript": "4.4.3"
   },
   "dependencies": {
     "ts-jest": "27.x.x"
