--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -2,19 +2,19 @@
   "name": "@hypertype/domain",
   "version": "3.8.2",
   "description": "",
-  "main": "dist/esm/index.js",
-  "bundle": "dist/bundle/index.js",
+  "main": "dist/index.js",
   "typings": "dist/typings/index.d.ts",
   "scripts": {
-    "build": "tsc -b --watch",
-    "bundle": "hypertype lib",
+    "build": "cmmn compile -b --watch",
+    "bundle": "cmmn bundle",
     "prod": "hypertype lib --prod",
-    "bundle:watch": "hypertype lib --watch",
+    "bundle:watch": "cmmn bundle --watch",
     "bundle:prod:stats": "hypertype lib --prod --stats",
     "deploy": "npm version patch && npm publish",
     "manual": "tsc -b && hypertype lib && hypertype lib --prod",
     "test": "jest"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hypertype/infr.git"
@@ -48,8 +48,18 @@
     "@hypertype/core": "^3.8.2",
     "@hypertype/infr": "^3.8.2",
     "@hypertype/tools": "^3.8.2",
+    "@cmmn/core": "^1.4.2",
+    "@cmmn/domain": "^1.4.2",
+    "@cmmn/tools": "^1.4.1",
     "@types/node": "16.x.x",
-    "typescript": "4.5.x"
+    "typescript": "4.4.3"
+  },
+  "cmmn": {
+    "index": {
+      "input": "./dist/esm/index.js",
+      "external": ["@hypertype", "@cmmn", "cellx"],
+      "module": "es,cjs"
+    }
   },
   "hypertype": {
     "lib": {
