--- a/packages/tools/tsconfig.json
+++ b/packages/tools/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ESNext",
     "module": "CommonJS",
     "outDir": "./dist",
+    "declaration": true,
     "moduleResolution": "Node",
     "allowJs": true,
     "checkJs": true,
