--- a/packages/infr-node/package.json
+++ b/packages/infr-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypertype/infr-node",
-  "version": "3.8.2",
+  "version": "4.0.1-cmmn",
   "description": "",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
@@ -39,9 +39,9 @@
     }
   },
   "devDependencies": {
-    "@hypertype/core": "^3.8.2",
-    "@hypertype/infr": "^3.8.2",
-    "@hypertype/tools": "^3.8.2",
+    "@hypertype/core": "^4.0.1-cmmn",
+    "@hypertype/infr": "^4.0.1-cmmn",
+    "@hypertype/tools": "^4.0.1-cmmn",
     "@types/node": "16.x.x"
   },
   "peerDependencies": {
