--- a/packages/infr/package.json
+++ b/packages/infr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypertype/infr",
-  "version": "3.8.2",
+  "version": "4.0.1-cmmn",
   "description": "",
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
@@ -45,8 +45,8 @@
     "@hypertype/core": "*"
   },
   "devDependencies": {
-    "@hypertype/core": "^3.8.2",
-    "@hypertype/tools": "^3.8.2",
+    "@hypertype/core": "^4.0.1-cmmn",
+    "@hypertype/tools": "^4.0.1-cmmn",
     "@types/node": "16.x.x"
   },
   "hypertype": {
