--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "3.8.2",
+  "version": "4.0.1-cmmn",
   "description": "",
   "bin": {
     "hypertype": "bin.wrap.js"
