--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypertype/ui",
-  "version": "3.8.2",
+  "version": "4.0.1-cmmn",
   "description": "",
   "main": "dist/index.js",
   "typings": "dist/typings/index.d.ts",
@@ -31,20 +31,22 @@
   "peerDependencies": {
     "@hypertype/core": "*"
   },
-  "dependencies": {
-  },
   "devDependencies": {
-    "@cmmn/ui": "^1.4.2",
     "@cmmn/uhtml": "^1.4.2",
-    "@hypertype/core": "^3.8.2",
-    "@hypertype/tools": "^3.8.2",
+    "@cmmn/ui": "^1.4.2",
+    "@hypertype/core": "^4.0.1-cmmn",
+    "@hypertype/tools": "^4.0.1-cmmn",
     "@types/node": "16.x.x",
     "typescript": "4.4.3"
   },
   "cmmn": {
     "index": {
       "input": "./dist/esm/index.js",
-      "external": ["@hypertype", "@cmmn", "cellx"],
+      "external": [
+        "@hypertype",
+        "@cmmn",
+        "cellx"
+      ],
       "module": "es"
     }
   },
