--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -47,11 +47,13 @@
   "optionalDependencies": {
     "redux-devtools-extension": "*"
   },
+  "peerDependencies": {
+    "@hypertype/core": "*",
+    "@hypertype/infr": "*",
+    "@hypertype/ui": "*"
+  },
   "devDependencies": {
-    "@hypertype/core": "^3.8.3",
-    "@hypertype/infr": "^3.8.3",
     "@hypertype/tools": "^3.8.3",
-    "@hypertype/ui": "^3.8.3",
     "@types/node": "16.x.x",
     "@types/redux": "latest",
     "@types/router5": "latest",
