--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -39,7 +39,16 @@
     "webpack": "5.67.0",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-dev-server": "4.7.3",
-    "webpack-merge": "5.8.0"
+    "webpack-merge": "5.8.0",
+    "style-loader": "3.3.1",
+    "postcss": "8.4.5",
+    "postcss-loader": "6.2.1",
+    "postcss-preset-env": "7.2.0",
+    "postcss-normalize": "10.0.1",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "mini-css-extract-plugin": "2.4.5",
+    "css-minimizer-webpack-plugin": "3.3.1",
+    "@svgr/webpack": "5.5.0"
   },
   "devDependencies": {
     "@testdeck/jest": "*",
