--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -47,8 +47,7 @@
     "postcss-normalize": "10.0.1",
     "postcss-flexbugs-fixes": "5.0.2",
     "mini-css-extract-plugin": "2.4.5",
-    "css-minimizer-webpack-plugin": "3.3.1",
-    "@svgr/webpack": "5.5.0"
+    "css-minimizer-webpack-plugin": "3.3.1"
   },
   "devDependencies": {
     "@testdeck/jest": "*",
