--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -35,7 +35,7 @@
     "ts-loader": "9.2.6",
     "tsconfig-paths-webpack-plugin": "3.5.2",
     "ttypescript": "^1.5.10",
-    "typescript": "4.4.3",
+    "typescript": "4.x.x",
     "webpack": "5.67.0",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-dev-server": "4.7.3",
