--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@hypertype/core",
-	"version": "4.0.2-cmmn",
+	"version": "4.0.3-cmmn",
 	"description": "",
 	"main": "dist/index.js",
 	"bundle": "dist/index.js",
@@ -51,7 +51,7 @@
 		"@cmmn/core": "^1.4.2"
 	},
 	"devDependencies": {
-		"@hypertype/tools": "^4.0.2-cmmn",
+		"@hypertype/tools": "^4.0.3-cmmn",
 		"@types/jest": "27.x.x",
 		"@types/luxon": "1.15.2",
 		"@types/node": "16.x.x",
@@ -75,7 +75,8 @@
 		"index": {
 			"input": "dist/esm/index.js",
 			"external": [
-				"@cmmn", "luxon"
+				"@cmmn",
+				"luxon"
 			]
 		}
 	},
