--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "lerna": "4.x.x",
     "@cmmn/tools": "^1.4.1",
-    "typescript": "4.4.3"
+    "typescript": "4.x.x"
   },
   "dependencies": {
     "ts-jest": "27.x.x"
