--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,75 +1,53 @@
 {
-  "name": "@hypertype/app",
-  "version": "4.0.3-cmmn",
-  "description": "",
-  "main": "dist/index.js",
-  "bundle": "dist/index.js",
-  "typings": "dist/typings/index.d.ts",
-  "scripts": {
-    "build": "tsc -b --watch",
-    "bundle": "hypertype lib",
-    "bundle:watch": "hypertype lib --watch",
-    "prod": "hypertype lib --prod",
-    "deploy": "npm version patch && npm publish",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hypertype/app.git"
-  },
-  "files": [
-    "dist",
-    "tsconfig.json"
-  ],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hypertype/app/issues"
-  },
-  "homepage": "https://github.com/hypertype/app#readme",
-  "directories": {
-    "test": "tests"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "globals": {
-      "ts-jest": {
-        "tsConfig": "tests/tsconfig.json"
-      }
-    }
-  },
-  "bundledDependencies": [
-    "redux",
-    "router5",
-    "router5-plugin-browser"
-  ],
-  "optionalDependencies": {
-    "redux-devtools-extension": "*"
-  },
-  "peerDependencies": {
-    "@hypertype/core": "*",
-    "@hypertype/infr": "*",
-    "@hypertype/ui": "*"
-  },
-  "devDependencies": {
-    "@hypertype/core": "^4.0.3-cmmn",
-    "@hypertype/infr": "^4.0.3-cmmn",
-    "@hypertype/tools": "^4.0.3-cmmn",
-    "@hypertype/ui": "^4.0.3-cmmn",
-    "@types/node": "16.x.x",
-    "@types/redux": "latest",
-    "@types/router5": "latest",
-    "redux": "4.0.5",
-    "router5": "8.0.1",
-    "router5-plugin-browser": "8.0.1",
-    "typescript": "4.4.3"
-  },
-  "hypertype": {
-    "lib": {
-      "bundler": "node",
-      "entryPoint": "dist/esm/index.js"
-    }
-  },
-  "gitHead": "9151a37757c75a5b80836c57de97db2bf7158fa0"
+	"name": "@hypertype/app",
+	"version": "4.0.3-cmmn",
+	"description": "",
+	"main": "dist/index.js",
+	"bundle": "dist/index.js",
+	"typings": "dist/typings/index.d.ts",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/hypertype/app.git"
+	},
+	"files": [
+		"dist",
+		"tsconfig.json"
+	],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/hypertype/app/issues"
+	},
+	"homepage": "https://github.com/hypertype/app#readme",
+	"directories": {
+		"test": "tests"
+	},
+	"jest": {
+		"preset": "ts-jest",
+		"testEnvironment": "node",
+		"globals": {
+			"ts-jest": {
+				"tsConfig": "tests/tsconfig.json"
+			}
+		}
+	},
+	"bundledDependencies": [],
+	"peerDependencies": {
+		"@hypertype/core": "*",
+		"@hypertype/infr": "*",
+		"@hypertype/ui": "*"
+	},
+	"devDependencies": {
+		"redux": "4.0.5",
+		"router5": "8.0.1",
+		"router5-plugin-browser": "8.0.1",
+		"typescript": "4.x.x"
+	},
+	"hypertype": {
+		"lib": {
+			"bundler": "node",
+			"entryPoint": "dist/esm/index.js"
+		}
+	},
+	"gitHead": "9151a37757c75a5b80836c57de97db2bf7158fa0"
 }
