--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.0",
   "main": "index.js",
   "scripts": {
+    "leaveOnlySrc": "dwfeFs cleanDirs --dirPaths=\";packages/*\" --fileNames=\"dist;node_modules;package-lock.json\"",
     "bootstrap": "lerna bootstrap --hoist",
     "build": "tsc -b --watch",
     "bundle": "lerna run bundle",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "lerna": "4.x.x",
+    "@do-while-for-each/fs": "1.2.16",
     "typescript": "4.5.x"
   },
   "dependencies": {
