--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,6 +5,14 @@
 	"main": "dist/index.js",
 	"bundle": "dist/index.js",
 	"typings": "dist/typings/index.d.ts",
+  "scripts": {
+    "build": "tsc -b --watch",
+    "bundle": "hypertype lib",
+    "bundle:watch": "hypertype lib --watch",
+    "prod": "hypertype lib --prod",
+    "deploy": "npm version patch && npm publish",
+    "test": "jest"
+  },
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/hypertype/app.git"
