--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,53 +1,66 @@
 {
-	"name": "@hypertype/ui",
-	"version": "4.0.4-cmmn",
-	"description": "",
-	"main": "dist/index.js",
-	"typings": "dist/typings/index.d.ts",
-	"files": [
-		"dist"
-	],
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/hypertype/ui.git"
-	},
-	"author": "",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/hypertype/ui/issues"
-	},
-	"homepage": "https://github.com/hypertype/ui#readme",
-	"peerDependencies": {
-		"@hypertype/core": "*"
-	},
-  "dependencies": {
-    "@cmmn/uhtml": "^1.4.2"
+  "name": "@hypertype/ui",
+  "version": "4.0.3-cmmn",
+  "description": "",
+  "main": "dist/index.js",
+  "typings": "dist/typings/index.d.ts",
+  "scripts": {
+    "build": "tsc -b --watch",
+    "bundle": "hypertype lib",
+    "bundle:watch": "cmmn bundle --watch",
+    "prod": "hypertype lib --prod",
+    "build:es5": "tsc -b --watch tsconfig.es5.json",
+    "bundle:es5": "hypertype es5 --watch",
+    "bundle:es5:prod": "hypertype es5 --prod",
+    "stats": "hypertype lib --stats",
+    "deploy": "npm version patch && npm publish"
+  },
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hypertype/ui.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hypertype/ui/issues"
+  },
+  "homepage": "https://github.com/hypertype/ui#readme",
+  "peerDependencies": {
+    "@hypertype/core": "*"
   },
   "devDependencies": {
-		"typescript": "4.x.x"
-	},
-	"cmmn": {
-		"index": {
-			"input": "./dist/esm/index.js",
-			"external": [
-				"@hypertype",
-				"@cmmn",
-				"cellx"
-			],
-			"module": "es"
-		}
-	},
-	"type": "module",
-	"hypertype": {
-		"lib": {
-			"bundler": "node",
-			"entryPoint": "dist/esm/index.js"
-		},
-		"es5": {
-			"bundler": "node",
-			"entryPoint": "dist/es5/index.js",
-			"outputFilename": "index.es5.js"
-		}
-	},
-	"gitHead": "9151a37757c75a5b80836c57de97db2bf7158fa0"
+    "@cmmn/uhtml": "^1.4.2",
+    "@cmmn/ui": "^1.4.2",
+    "@hypertype/core": "^4.0.3-cmmn",
+    "@hypertype/tools": "^4.0.3-cmmn",
+    "@types/node": "16.x.x",
+    "typescript": "4.x.x"
+  },
+  "cmmn": {
+    "index": {
+      "input": "./dist/esm/index.js",
+      "external": [
+        "@hypertype",
+        "@cmmn",
+        "cellx"
+      ],
+      "module": "es"
+    }
+  },
+  "type": "module",
+  "hypertype": {
+    "lib": {
+      "bundler": "node",
+      "entryPoint": "dist/esm/index.js"
+    },
+    "es5": {
+      "bundler": "node",
+      "entryPoint": "dist/es5/index.js",
+      "outputFilename": "index.es5.js"
+    }
+  },
+  "gitHead": "9151a37757c75a5b80836c57de97db2bf7158fa0"
 }
