--- a/packages/infr-node/package.json
+++ b/packages/infr-node/package.json
@@ -6,9 +6,6 @@
   "main": "dist/index.js",
   "typings": "dist/typings/index.d.ts",
   "scripts": {
-    "build": "tsc -b --watch",
-    "bundle": "hypertype lib",
-    "prod": "hypertype lib --prod",
     "deploy": "npm version patch && npm publish",
     "test": "jest"
   },
@@ -39,14 +36,12 @@
     }
   },
   "devDependencies": {
-    "@hypertype/core": "^4.0.4-cmmn",
-    "@hypertype/infr": "^4.0.4-cmmn",
     "@hypertype/tools": "^4.0.4-cmmn",
     "@types/node": "16.x.x"
   },
   "peerDependencies": {
-    "@hypertype/core": "*",
-    "@hypertype/infr": "*"
+    "@hypertype/core": "^4.0.4-cmmn",
+    "@hypertype/infr": "^4.0.4-cmmn"
   },
   "dependencies": {
     "eventsource": "*",
