--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,18 +1,10 @@
 {
   "name": "@hypertype/ui",
-  "version": "4.0.3-cmmn",
+  "version": "4.0.4-cmmn",
   "description": "",
   "main": "dist/index.js",
   "typings": "dist/typings/index.d.ts",
   "scripts": {
-    "build": "tsc -b --watch",
-    "bundle": "hypertype lib",
-    "bundle:watch": "cmmn bundle --watch",
-    "prod": "hypertype lib --prod",
-    "build:es5": "tsc -b --watch tsconfig.es5.json",
-    "bundle:es5": "hypertype es5 --watch",
-    "bundle:es5:prod": "hypertype es5 --prod",
-    "stats": "hypertype lib --stats",
     "deploy": "npm version patch && npm publish"
   },
   "files": [
@@ -29,13 +21,11 @@
   },
   "homepage": "https://github.com/hypertype/ui#readme",
   "peerDependencies": {
-    "@hypertype/core": "*"
+    "@hypertype/core": "^4.0.4-cmmn"
   },
   "devDependencies": {
     "@cmmn/uhtml": "^1.4.2",
-    "@cmmn/ui": "^1.4.2",
-    "@hypertype/core": "^4.0.3-cmmn",
-    "@hypertype/tools": "^4.0.3-cmmn",
+    "@hypertype/tools": "^4.0.4-cmmn",
     "@types/node": "16.x.x",
     "typescript": "4.x.x"
   },
