--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,24 +3,24 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"version": "3.8.1",
+	"version": "4.0.5-cmmn",
 	"license": "MIT",
 	"module": "./dist/esm/index.js",
 	"main": "./dist/index.js",
 	"typings": "./dist/typings/index.d.ts",
-  "scripts": {
-    "deploy": "npm version patch && npm publish",
-    "test": "jest"
-  },
+	"scripts": {
+		"deploy": "npm version patch && npm publish",
+		"test": "jest"
+	},
 	"files": [
 		"dist",
 		"node-loader.js"
 	],
 	"peerDependencies": {
-    "@hypertype/core": "^4.0.4-cmmn",
-    "@hypertype/infr": "^4.0.4-cmmn",
-    "@hypertype/infr-node": "^4.0.4-cmmn"
-  },
+		"@hypertype/core": "^4.0.4-cmmn",
+		"@hypertype/infr": "^4.0.4-cmmn",
+		"@hypertype/infr-node": "^4.0.4-cmmn"
+	},
 	"dependencies": {
 		"angular-template": "^2.4.0",
 		"body-parser": "^1.19.0",
